// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EntitiesInput.vue newEntity emit new event change text to "my name is" renders correctly 1`] = `
<bh-input-stub>
  <div class="entities-input__badges"></div>
  <div class="entities-input__new-entity">
    <new-entity-stub text="the name is" debouncetime="750" repository="[object Object]" availableentities="" labels="[object Object]" availablelabels="" class="entities-input__new-entity__wrapper"></new-entity-stub>
  </div>
</bh-input-stub>
`;

exports[`EntitiesInput.vue newEntity emit new event renders correctly 1`] = `
<bh-input-stub>
  <div class="entities-input__badges">
    <bh-badge-stub size="small" class="entities-input__badges__badge entity-sunflower"><span><span><strong>name</strong></span>
      <!----></span>
      <bh-dropdown-stub>
        <bh-icon-button-stub type="button" value="dots-horizontal" size="small"></bh-icon-button-stub>
        <bh-dropdown-item-stub>Edit</bh-dropdown-item-stub>
        <bh-dropdown-item-stub>Remove</bh-dropdown-item-stub>
      </bh-dropdown-stub>
    </bh-badge-stub>
  </div>
  <div class="entities-input__new-entity">
    <new-entity-stub text="my name is douglas" debouncetime="750" repository="[object Object]" availableentities="" labels="[object Object]" availablelabels="" class="entities-input__new-entity__wrapper"></new-entity-stub>
  </div>
</bh-input-stub>
`;

exports[`EntitiesInput.vue renders correctly 1`] = `
<bh-input-stub>
  <div class="entities-input__badges"></div>
  <div class="entities-input__new-entity">
    <new-entity-stub text="my name is douglas" debouncetime="750" repository="[object Object]" availableentities="" labels="[object Object]" availablelabels="" class="entities-input__new-entity__wrapper"></new-entity-stub>
  </div>
</bh-input-stub>
`;
